--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .jumbotron {
   padding-top: 6rem;
-  background-color: #a2edfa;
+  background-color: #e2edff;
 }
 #Gallery {
-  background-color: #a2edfa;
+  background-color: #e2edff;
 }
 section {
   padding-top: 5rem;
